--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html ng-app="chrome.plugin.trynew" style="height:500px;width:350px">
   <head>
     <title>Trello Checklists</title>
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="lib/angular/angular-material.css">
-    <link rel="stylesheet" type="text/css" href="lib/angular/angular-material-icons.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="app/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="app/lib/angular-material/angular-material.min.css">
+    <link rel="stylesheet" type="text/css" href="app/lib/angular-material-icons/angular-material-icons.css">
+    <link rel="stylesheet" type="text/css" href="app/css/style.css">
   </head>
   <body ng-controller="TryNewRootController as vm" layout="row" ng-cloak>
     <div layout="column" flex>
@@ -60,15 +60,14 @@
       </md-content>
     </div>
     
-    <script type="text/javascript" src="lib/jquery/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-animate.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-aria.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-material.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-material-icons.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-messages.min.js"></script>
-    <script type="text/javascript" src="lib/utils/xml2json.js"></script>
+    <script type="text/javascript" src="app/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="app/lib/angular/angular.min.js"></script> 
+    <script type="text/javascript" src="app/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="app/lib/angular-animate/angular-animate.min.js"></script>
+    <script type="text/javascript" src="app/lib/angular-aria/angular-aria.min.js"></script>
+    <script type="text/javascript" src="app/lib/angular-material/angular-material.min.js"></script>
+    <script type="text/javascript" src="app/lib/angular-material-icons/angular-material-icons.min.js"></script>
+    <script type="text/javascript" src="app/lib/angular-messages/angular-messages.min.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
   </body>
 </html>
