Basic login working

--- a/login.html
+++ b/login.html
@@ -9,9 +9,15 @@
   <body ng-controller="TryNewRootController as vm" layout="row" ng-cloak>
     <div layout="column" flex>
       <md-content flex>
-        <div>
+        <div ng-if="vm.loginRequired">
           <md-button class="md-raised md-primary" ng-click="vm.trelloLogin()">
             <md-icon md-svg-icon="save"></md-icon> Trello Login
+          </md-button>
+        </div>
+        <div ng-if="!vm.loginRequired">
+          You are logged into Trello.
+          <md-button class="md-raised md-primary" ng-click="vm.trelloLogout()">
+            <md-icon md-svg-icon="save"></md-icon> Trello Logout
           </md-button>
         </div>
       </md-content>
