--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="app/lib/angular-messages/angular-messages.min.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/js/services/auth-service.js"></script>
+    <script type="text/javascript" src="app/js/services/trello-api.js"></script>
     <script type="text/javascript" src="app/js/controllers/login-controller.js"></script>
   </body>
 </html>
