logout from plugin

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div ng-if="vm.isLoggedIn">
           <div ng-include="'app/views/toolbar.html'"></div>
           User Found : <span ng-bind="vm.user.fullName"></span>
+          <md-button class="md-raised md-warn" ng-click="vm.logout()">
+              <md-icon md-svg-icon="close"></md-icon>Logout
+          </md-button>
         </div>
       </md-content>
     </div>
