--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <script type="text/javascript" src="app/js/controllers/login-controller.js"></script>
     <script type="text/javascript" src="app/js/controllers/trello-checklists-controller.js"></script>
     <script type="text/javascript" src="app/js/directives/boards/show-trello-boards.js"></script>
+    <script type="text/javascript" src="app/js/directives/cards/show-trello-cards.js"></script>
   </body>
 </html>
