--- a/app/js/directives/cards/show-trello-cards.html
+++ b/app/js/directives/cards/show-trello-cards.html
@@ -1,5 +1,5 @@
 <div>
     <div ng-repeat="card in showTrelloCardsController.cards">
-        {{card.name}}/{{card.id}}/{{card.closed}}
+        <trello-card card="card"></trello-card>
     </div>
 </div>
