--- a/app/js/directives/card/trello-card.html
+++ b/app/js/directives/card/trello-card.html
@@ -1,22 +1,35 @@
 <div>
-    <md-card>
+    <md-card ng-class="{'card-with-no-checklist-items': trelloCardController.totalItemCount === 0}">
         <md-card-header>
             <md-card-header-text>
             <span class="md-title">{{trelloCardController.card.name}}</span>
+            <span class="md-subhead" ng-if="trelloCardController.totalItemCount !== 0">
+                <md-progress-linear md-mode="determinate" value="{{(trelloCardController.completeItemCount/trelloCardController.totalItemCount)*100}}"></md-progress-linear>
+            </span>
             </md-card-header-text>
         </md-card-header>
-        <!-- <md-card-actions layout="row" layout-align="start center">
-            <md-button>Action 1</md-button>
-            <md-button>Action 2</md-button>
+        <md-card-actions class="no-margin" layout="row" layout-align="start center" ng-if="trelloCardController.totalItemCount !== 0">
             <md-card-icon-actions>
-            <md-button class="md-icon-button" aria-label="toggle">
-                <md-icon md-svg-icon="md-toggle-arrow"></md-icon>
-            </md-button>
+                <md-button class="md-icon-button" aria-label="toggle" ng-click="trelloCardController.toggleShowCheckLists()">
+                    <md-icon ng-if="trelloCardController.showCheckLists" md-svg-icon="expand_less"></md-icon>
+                    <md-icon ng-if="!trelloCardController.showCheckLists" md-svg-icon="expand_more"></md-icon>
+                </md-button>
+                <md-button class="md-icon-button" aria-label="toggle">
+                    <md-icon md-svg-icon="star"></md-icon>
+                </md-button>
             </md-card-icon-actions>
-        </md-card-actions> -->
-        <md-card-content>
+        </md-card-actions>
+        <md-card-content ng-if="trelloCardController.showCheckLists">
             <div ng-repeat="checkList in trelloCardController.checkLists">
-                {{checkList.name}}/{{checkList.checkItems.length}}
+                <fieldset class="standard">
+                    <legend><b>{{checkList.name}}</b></legend>
+                    <div flex="50" ng-repeat="item in checkList.checkItems">
+                        <md-checkbox ng-checked="item.state === 'complete'" ng-click="">
+                            {{item.name}}
+                        </md-checkbox>
+                    </div>
+                </fieldset>
+                <br/>
             </div>
         </md-card-content>
     </md-card>
