--- a/app/js/directives/card/trello-card.html
+++ b/app/js/directives/card/trello-card.html
@@ -1,14 +1,14 @@
 <div>
-    <md-card ng-class="{'card-with-no-checklist-items': trelloCardController.totalItemCount === 0}">
+    <md-card ng-class="{'card-with-no-checklist-items': !trelloCardController.hasItems()}">
         <md-card-header>
             <md-card-header-text>
             <span class="md-title">{{trelloCardController.card.name}}</span>
-            <span class="md-subhead" ng-if="trelloCardController.totalItemCount !== 0">
+            <span class="md-subhead" ng-if="trelloCardController.hasItems()">
                 <md-progress-linear md-mode="determinate" value="{{(trelloCardController.completeItemCount/trelloCardController.totalItemCount)*100}}"></md-progress-linear>
             </span>
             </md-card-header-text>
         </md-card-header>
-        <md-card-actions class="no-margin" layout="row" layout-align="start center" ng-if="trelloCardController.totalItemCount !== 0">
+        <md-card-actions class="no-margin" layout="row" layout-align="start center" ng-if="trelloCardController.hasItems()">
             <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="toggle" ng-click="trelloCardController.toggleShowCheckLists()">
                     <md-icon ng-if="trelloCardController.showCheckLists" md-svg-icon="expand_less"></md-icon>
@@ -23,8 +23,8 @@
             <div ng-repeat="checkList in trelloCardController.checkLists">
                 <fieldset class="standard">
                     <legend><b>{{checkList.name}}</b></legend>
-                    <div flex="50" ng-repeat="item in checkList.checkItems">
-                        <md-checkbox ng-checked="item.state === 'complete'" ng-click="">
+                    <div ng-repeat="item in checkList.checkItems">
+                        <md-checkbox ng-checked="trelloCardController.isComplete(item)" ng-click="trelloCardController.toggleItem(item)">
                             {{item.name}}
                         </md-checkbox>
                     </div>
