--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/js/services/auth-service.js"></script>
     <script type="text/javascript" src="app/js/services/trello-api.js"></script>
+    <script type="text/javascript" src="app/js/services/favorite-cards-service.js"></script>
     <script type="text/javascript" src="app/js/controllers/login-controller.js"></script>
     <script type="text/javascript" src="app/js/controllers/trello-checklists-controller.js"></script>
     <script type="text/javascript" src="app/js/directives/boards/show-trello-boards.js"></script>
