Date Time picker

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Trello Checklists</title>
     <link rel="stylesheet" type="text/css" href="app/lib/angular-material/angular-material.min.css">
     <link rel="stylesheet" type="text/css" href="app/lib/angular-material-icons/angular-material-icons.css">
+    <link rel="stylesheet" type="text/css" href="app/lib/ng-material-datetimepicker/dist/material-datetimepicker.min.css">
     <link rel="stylesheet" type="text/css" href="app/css/style.css">
   </head>
   <body ng-controller="TrelloChecklistsController as vm" layout="row" ng-cloak>
@@ -38,10 +39,13 @@
     <script type="text/javascript" src="app/lib/angular-material/angular-material.min.js"></script>
     <script type="text/javascript" src="app/lib/angular-material-icons/angular-material-icons.min.js"></script>
     <script type="text/javascript" src="app/lib/angular-messages/angular-messages.min.js"></script>
+    <script type="text/javascript" src="app/lib/moment/min/moment.min.js"></script>
+    <script type="text/javascript" src="app/lib/ng-material-datetimepicker/dist/angular-material-datetimepicker.min.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/js/services/auth-service.js"></script>
     <script type="text/javascript" src="app/js/services/trello-api.js"></script>
     <script type="text/javascript" src="app/js/services/favorite-cards-service.js"></script>
+    <script type="text/javascript" src="app/js/services/notification-service.js"></script>
     <script type="text/javascript" src="app/js/controllers/login-controller.js"></script>
     <script type="text/javascript" src="app/js/controllers/trello-checklists-controller.js"></script>
     <script type="text/javascript" src="app/js/directives/boards/show-trello-boards.js"></script>
