Login page fix. Datepicker dependency missing added.

--- a/login.html
+++ b/login.html
@@ -25,6 +25,8 @@
     <script type="text/javascript" src="app/lib/angular-aria/angular-aria.min.js"></script>
     <script type="text/javascript" src="app/lib/angular-material/angular-material.min.js"></script>
     <script type="text/javascript" src="app/lib/angular-material-icons/angular-material-icons.min.js"></script>
+    <script type="text/javascript" src="app/lib/moment/min/moment.min.js"></script>
+    <script type="text/javascript" src="app/lib/ng-material-datetimepicker/dist/angular-material-datetimepicker.min.js"></script>
     <script type="text/javascript" src="app/lib/angular-messages/angular-messages.min.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/js/services/auth-service.js"></script>
