--- a/app/js/directives/card/trello-card.html
+++ b/app/js/directives/card/trello-card.html
@@ -15,9 +15,8 @@
                     <md-icon ng-if="!trelloCardController.showCheckLists" md-svg-icon="expand_more"></md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="toggle">
-                    <md-icon ng-if="(!trelloCardController.favoriteUpdating) && !trelloCardController.isFavorite()" md-svg-icon="star" ng-click="trelloCardController.favoriteIt()"></md-icon>
-                    <md-icon ng-if="(!trelloCardController.favoriteUpdating) && trelloCardController.isFavorite()" md-colors="{color:'primary'}" md-svg-icon="stared" ng-click="trelloCardController.unFavoriteIt()"></md-icon>
-                    <md-icon ng-if="trelloCardController.favoriteUpdating" md-svg-icon="star_half" ></md-icon>
+                    <md-icon ng-if="!trelloCardController.isFavorite()" md-svg-icon="unfavorite" ng-click="trelloCardController.favoriteIt()"></md-icon>
+                    <md-icon ng-if="trelloCardController.isFavorite()" md-colors="{color:'default-primary'}" md-svg-icon="favorite" ng-click="trelloCardController.unFavoriteIt()"></md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="toggle" ng-click="trelloCardController.openCardInTrello()">
                     <md-icon md-svg-icon="launch"></md-icon>
